tests/paczka1/fuzzy1/60948358.err
Error in line 2: D7O1 A662 6,3
Error in line 9: D7O1 S834 -2,2
Error in line 1: igzaJPc2kr0 S939 54,7
Error in line 6: mc5 A662 86,8
Error in line 21: LQzz S939 90,1
Error in line 33: igzaJPc2kr0 S422 30,9
Error in line 35: igzaJPc2kr0 S834 77,0
